--- a/example/vue.html
+++ b/example/vue.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>rollup-best example</title>
+    <title>rollup vue 组件</title>
     <script src="https://unpkg.com/vue@3.0.11/dist/vue.global.js"></script>
     <script src="../dist/best.umd.js"></script>
   </head>
@@ -16,14 +16,14 @@
     <script>
       Vue.createApp({
         setup() {
-          var message = "hello rollup";
+          var message = 'hello rollup';
           return {
             message,
           };
         },
       })
         .use(Best)
-        .mount("#app");
+        .mount('#app');
     </script>
   </body>
 </html>
