配置文件拆分

--- a/example/react.html
+++ b/example/react.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="../dist/best.umd.js"></script>
+    <script src="../dist/react/best.umd.js"></script>
   </body>
 </html>
