--- a/example/vue.html
+++ b/example/vue.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>rollup vue 组件</title>
     <script src="https://unpkg.com/vue@3.0.11/dist/vue.global.js"></script>
-    <script src="../dist/best.umd.js"></script>
+    <script src="../dist/vue/best.umd.js"></script>
   </head>
   <body>
     <div id="app">
@@ -22,7 +22,7 @@
           };
         },
       })
-        .use(Best)
+        .use(VueBest)
         .mount('#app');
     </script>
   </body>
